CHATS_SIT/force-app/main/default/objects/T_SBSD_INDIV__c/validationRules/Last_Name_No_Special_Characters.validationRule-meta.xml
<ValidationRule>
    <fullName>Last_Name_No_Special_Characters</fullName>
    <active>true</active>
    <description>Last Name must contain at least one letter, and can only use letters, spaces, hyphens, and apostrophes. Names cannot start or end with a space, and cannot use multiple special characters in a row.</description>
    <errorConditionFormula>NOT(REGEX(NAM_LAST__c,&quot;^(?! )(?!.*(--|  |&apos;&apos;))(?=.*[A-Za-z])[A-Za-z&apos; -]+(?&lt;! )$&quot;))</errorConditionFormula>
    <errorMessage>Last Name must contain at least one letter, and can only use letters, spaces, hyphens, and apostrophes. Names cannot start or end with a space, and cannot use multiple special characters in a row.</errorMessage>
</ValidationRule>