CHATS_SIT/force-app/main/default/objects/T_SBSD_INDIV__c/validationRules/Middle_Initial_No_Special_Characters.validationRule-meta.xml
<ValidationRule>
    <fullName>Middle_Initial_No_Special_Characters</fullName>
    <active>true</active>
    <description>Middle Initial cannot contain special characters (except spaces).</description>
    <errorConditionFormula>AND(NOT(REGEX(NAM_MI__c,&quot;[a-zA-Z ]+&quot;)), NOT(ISBLANK(NAM_MI__c)))</errorConditionFormula>
    <errorMessage>Middle Initial cannot contain special characters (except spaces).</errorMessage>
</ValidationRule>