CHATS_SIT/force-app/main/default/objects/T_SBSD_INDIV__c/validationRules/read_only_if_indiv_cleared.validationRule-meta.xml
<ValidationRule>
    <fullName>read_only_if_indiv_cleared</fullName>
    <active>false</active>
    <description>Fields: First Name, Middle Initial, Last Name, Gender, SSN, DOB, Date of Death cannot be edited for the cleared individual.</description>
    <errorConditionFormula>AND( NOT( ISNEW() ) , 
     OR( 
        ISCHANGED( DTE_DOB__c ) ,
        ISCHANGED( NAM_FIRST__c ) ,
        ISCHANGED( NAM_LAST__c ) ,
        ISCHANGED( NAM_MI__c ) ,
        ISCHANGED( NBR_SSN__c ) ,
        ISCHANGED( CDE_GENDER__c ),
        ISCHANGED( DTE_Death__c )
    ),
    ISPICKVAL( IND_NOTIFY_SIDMOD__c , &quot;Y&quot;),
    NOT(ISCHANGED(IND_NOTIFY_SIDMOD__c )),
   $Label.Batch_User_Id  &lt;&gt;  $User.Id 
)</errorConditionFormula>
    <errorMessage>Fields: First Name, Middle Initial, Last Name, Gender, SSN, DOB, Date of Death cannot be edited for the cleared individual.</errorMessage>
</ValidationRule>