CHATS_SIT/force-app/main/default/objects/T_SBSD_INDIV__c/validationRules/Require_HowVerifiedIf_IdenVer_iswritten.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_HowVerifiedIf_IdenVer_iswritten</fullName>
    <active>true</active>
    <errorConditionFormula>AND($Label.Batch_User_Id &lt;&gt; $User.Id , ISPICKVAL( CDE_VRFYD_IDNTY__c , &quot;V&quot;) ,  ISPICKVAL( CDE_SOURCE_VRFYD_IDNTY__c, &apos;&apos;),NOT(ISNEW()),NOT($Setup.ByPass_Validation_Setting__c.Is_Batch_Excluded__c ), NOT(Is_CBMS_Data__c), NOT(Is_Peak_Data__c), NOT(ISCHANGED(Bypass_On__c)))</errorConditionFormula>
    <errorDisplayField>CDE_SOURCE_VRFYD_IDNTY__c</errorDisplayField>
    <errorMessage>Please enter a value</errorMessage>
</ValidationRule>