CHATS_SIT/force-app/main/default/objects/T_SBSD_INDIV__c/validationRules/SSN_Alphanumeric_Only.validationRule-meta.xml
<ValidationRule>
    <fullName>SSN_Alphanumeric_Only</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(Is_Peak_Data__c)&amp;&amp; NOT(Is_CBMS_Data__c)&amp;&amp; NOT(ISCHANGED(Bypass_On__c))&amp;&amp; !ISBLANK(NBR_SSN__c )&amp;&amp; OR(NOT(ISNUMBER(NBR_SSN__c )),CONTAINS(NBR_SSN__c  ,&quot; &quot;),CONTAINS(NBR_SSN__c  ,&quot;-&quot;))</errorConditionFormula>
    <errorDisplayField>NBR_SSN__c</errorDisplayField>
    <errorMessage>Special characters and spaces are not allowed</errorMessage>
</ValidationRule>