CHATS_SIT/force-app/main/default/objects/T_SBSD_INDIV__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NBR_SSN__c</field>
        <operation>equals</operation>
        <value>523212060</value>
    </filters>
    <label>All</label>
</ListView>