CHATS_SIT/force-app/main/default/objects/T_SBSD_INDIV__c/listViews/All_1.listView-meta.xml
<ListView>
    <fullName>All_1</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>IDN_STATE__c</columns>
    <columns>NAM_FIRST__c</columns>
    <columns>NAM_LAST__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAM_FIRST__c</field>
        <operation>equals</operation>
        <value>SHAUN</value>
    </filters>
    <label>All 1</label>
</ListView>