CHATS_SIT/force-app/main/default/objects/T_SBSD_INDIV__c/listViews/Individuals_in_Sid_Req.listView-meta.xml
<ListView>
    <fullName>Individuals_in_Sid_Req</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>NAM_FIRST__c</columns>
    <columns>NAM_MI__c</columns>
    <columns>NAM_LAST__c</columns>
    <columns>IDN_STATE__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IDN_STATE__c</field>
        <operation>equals</operation>
    </filters>
    <label>Individuals in Sid Req</label>
</ListView>